package whisper

import (
	"github.com/mutablelogic/go-whisper/sys/whisper"
	"github.com/xaionaro-go/speech/pkg/speech/speechtotext/implementations/whisper/types"
	"github.com/xaionaro-go/speech/pkg/speech/speechtotext/server/proto/go/speechtotext_grpc"
)

type AlignmentAheadsPreset types.AlignmentAheadsPreset

// String just implements fmt.Stringer, flag.Value and pflag.Value.
func (p AlignmentAheadsPreset) ToWhisper() whisper.AlignmentAheadsPreset {
	switch speechtotext_grpc.WhisperAlignmentAheadsPreset(p) {
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetNone:
		return whisper.AlignmentAheadsPresetNone
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetNTopMost:
		return whisper.AlignmentAheadsPresetNTopMost
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetCustom:
		return whisper.AlignmentAheadsPresetCustom
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetTinyEn:
		return whisper.AlignmentAheadsPresetTinyEn
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetTiny:
		return whisper.AlignmentAheadsPresetTiny
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetBaseEn:
		return whisper.AlignmentAheadsPresetBaseEn
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetBase:
		return whisper.AlignmentAheadsPresetBase
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetSmallEn:
		return whisper.AlignmentAheadsPresetSmallEn
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetSmall:
		return whisper.AlignmentAheadsPresetSmall
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetMediumEn:
		return whisper.AlignmentAheadsPresetMediumEn
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetMedium:
		return whisper.AlignmentAheadsPresetMedium
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetLargeV1:
		return whisper.AlignmentAheadsPresetLargeV1
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetLargeV2:
		return whisper.AlignmentAheadsPresetLargeV2
	case speechtotext_grpc.WhisperAlignmentAheadsPreset_WhisperAlignmentAheadsPresetLargeV3:
		return whisper.AlignmentAheadsPresetLargeV3
	}
	panic(p)
}
